--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,6 +54,6 @@ pages:           # Job nuevo para GitLab Pages
     - echo "Publicando en GitLab Pages..."
   artifacts:
     paths:
-      - /    # Carpeta que quieres publicar
+      - docs    # Carpeta que quieres publicar
   only:
     - main
